@startuml 09_back_domain
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam noteBackgroundColor #FDF6E3
skinparam noteBorderColor #C4BCA3
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam defaultFontName Inter
skinparam ArrowColor #63666A
skinparam class {
  BackgroundColor #FFF3D8
  BorderColor #8A6210
}
hide empty methods

package "user · BACK" #F7F4EC {
  class User <<@Entity>> {
    + id : Long? = null
    + email : String
    + passwordHash : String
    + firstName : String?
    + lastName : String?
    + avatarUrl : String?
    + isActive : Boolean
  }
  class Role <<@Entity>> {
    + id : Long? = null
    + name : String
  }
  class Privilege <<@Entity>> {
    + id : Long? = null
    + name : String
  }
}

package "course · BACK" #F7F4EC {
  class Course <<@Entity>> {
    + id : Long? = null
    + code : String
    + name : String
    + term : String
    + joinCode : String
    + syllabusSourceUri : String?
    + syllabusParsedAt : Instant?
  }
  class Enrollment <<@Entity>> {
    + id : Long? = null
    + status : EnrollmentStatus
    + joinedAt : Instant
  }
  class SyllabusTopic <<@Entity>> {
    + id : Long? = null
    + code : String
    + title : String
    + orderIndex : Int
  }
  class GlossaryEntry <<@Entity>> {
    + id : Long? = null
    + term : String
    + canonicalForm : String
    + kind : GlossaryKind
  }
  class GlossarySuggestion <<@Entity>> {
    + id : Long? = null
    + originalText : String
    + suggestedCorrection : String
    + status : SuggestionStatus
    + createdAt : Instant
    + resolvedAt : Instant?
  }
}

package "note · BACK" #F7F4EC {
  class Note <<@Entity>> {
    + id : Long? = null
    + classDate : LocalDate
    + title : String
    + status : NoteStatus
    + content : JsonNode?
    + contentGeneratedAt : Instant?
  }
  class NotePage <<@Entity>> {
    + id : Long? = null
    + pageIndex : Int
    + perceptualHash : String
    + storageUri : String
    + levelReached : ProcessingLevel
    + overallConfidence : Float
    + qualityMetrics : JsonNode?
    + regions : JsonNode?
  }
}

package "study · BACK" #F7F4EC {
  class TopicCoverage <<@Entity>> {
    + id : Long? = null
    + state : CoverageState
    + score : Float
  }
  class StudyItem <<@Entity>> {
    + id : Long? = null
    + kind : ItemKind
    + payload : JsonNode
  }
  class Attempt <<@Entity>> {
    + id : Long? = null
    + response : JsonNode
    + isCorrect : Boolean
    + answeredAt : Instant
  }
  class ReviewSchedule <<@Entity>> {
    + id : Long? = null
    + dueAt : Instant
    + intervalDays : Int
    + ease : Float
  }
}

User "*" -- "*" Role : user_roles
Role "*" -- "*" Privilege : role_privileges

User "1" --> "*" Course : owns
User "1" --> "*" Enrollment
Course "1" --> "*" Enrollment
Course "1" *-- "*" SyllabusTopic
Course "1" *-- "*" GlossaryEntry
Course "1" *-- "*" GlossarySuggestion
User "1" --> "*" GlossarySuggestion
SyllabusTopic "0..1" --> "*" SyllabusTopic : parent

User "1" --> "*" Note
Course "1" --> "*" Note
SyllabusTopic "0..1" --> "*" Note
Note "1" *-- "0..*" NotePage : "0..N while DRAFT"
Note "0..1" --> "*" GlossarySuggestion

User "1" --> "*" TopicCoverage
SyllabusTopic "1" --> "*" TopicCoverage
Course "1" --> "*" StudyItem
SyllabusTopic "1" --> "*" StudyItem
User "1" --> "*" Attempt
StudyItem "1" --> "*" Attempt
User "1" --> "*" ReviewSchedule
StudyItem "1" --> "*" ReviewSchedule

note as N1
  Kotlin entities are **not** data classes.
  They are plain classes with `var`
  properties, opened by the kotlin-jpa
  and kotlin-spring compiler plugins.
  See 7.5 for why.

  `id : Long? = null` is the JPA idiom:
  null means "not yet persisted".
  Nullability is now visible in the
  diagram â€” the Java version could
  not express it.
end note
@enduml
